--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/angular": "1.6.5",
     "@types/lodash-es": "^4.14.4",
     "@types/moment": "^2.13.0",
+    "@types/node": "^7.0.5",
     "autoprefixer": "^6.6.1",
     "babel": "^6.5.2",
     "babel-core": "^6.13.2",
